--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,9 @@
 inference_address=http://0.0.0.0:8080
 management_address=http://0.0.0.0:8081
 metrics_address=http://0.0.0.0:8082
-number_of_netty_threads=32
-job_queue_size=1000
 model_store=/home/model-server/model-store
 workflow_store=/home/model-server/wf-store
+install_py_dep_per_model=true
+number_of_netty_threads=32
+netty_client_threads=32
+default_workers_per_model=1
